Refactor the code and start making more detailed tests