@@ -1,10 +1,10 @@
 package dev.idachev.recipeservice.service;
 
-import dev.idachev.recipeservice.mapper.RecipeMapper;
 import dev.idachev.recipeservice.model.Recipe;
-import dev.idachev.recipeservice.repository.FavoriteRecipeRepository;
 import dev.idachev.recipeservice.repository.RecipeRepository;
 import dev.idachev.recipeservice.web.dto.RecipeResponse;
+import dev.idachev.recipeservice.web.mapper.RecipeMapper;
+import dev.idachev.recipeservice.service.RecipeResponseEnhancer;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -18,8 +18,6 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-import dev.idachev.recipeservice.user.service.UserService;
-
 /**
  * Service for recipe search operations.
  * Responsible for all search-related functionality.
@@ -29,22 +27,16 @@ import dev.idachev.recipeservice.user.service.UserService;
 public class RecipeSearchService {
 
     private final RecipeRepository recipeRepository;
-    private final FavoriteRecipeRepository favoriteRecipeRepository;
     private final RecipeMapper recipeMapper;
-    private final CommentService commentService;
-    private final UserService userService;
+    private final RecipeResponseEnhancer recipeResponseEnhancer;
 
     @Autowired
     public RecipeSearchService(RecipeRepository recipeRepository,
-                               FavoriteRecipeRepository favoriteRecipeRepository,
                                RecipeMapper recipeMapper,
-                               CommentService commentService,
-                               UserService userService) {
+                               RecipeResponseEnhancer recipeResponseEnhancer) {
         this.recipeRepository = recipeRepository;
-        this.favoriteRecipeRepository = favoriteRecipeRepository;
         this.recipeMapper = recipeMapper;
-        this.commentService = commentService;
-        this.userService = userService;
+        this.recipeResponseEnhancer = recipeResponseEnhancer;
     }
 
     /**
@@ -57,20 +49,26 @@ public class RecipeSearchService {
      */
     @Transactional(readOnly = true)
     public Page<RecipeResponse> searchRecipes(String keyword, Pageable pageable, UUID userId) {
-        // If keyword is null or empty, return all recipes
+        Page<Recipe> recipePage;
         if (!StringUtils.hasText(keyword)) {
             log.debug("Empty search keyword, returning all recipes");
-            return getAllRecipes(pageable, userId);
+            recipePage = recipeRepository.findAll(pageable);
+        } else {
+            log.debug("Searching recipes with keyword: {}", keyword);
+            String trimmedKeyword = keyword.trim();
+            recipePage = recipeRepository.findByTitleContainingIgnoreCaseOrServingSuggestionsContainingIgnoreCase(
+                    trimmedKeyword, trimmedKeyword, pageable);
         }
+        log.debug("Found {} recipes matching keyword/criteria", recipePage.getTotalElements());
 
-        log.debug("Searching recipes with keyword: {}", keyword);
-        String trimmedKeyword = keyword.trim();
-
-        Page<Recipe> recipePage = recipeRepository.findByTitleContainingIgnoreCaseOrServingSuggestionsContainingIgnoreCase(
-                trimmedKeyword, trimmedKeyword, pageable);
-
-        log.debug("Found {} recipes matching keyword: {}", recipePage.getTotalElements(), keyword);
-        return mapAndEnhancePage(recipePage, pageable, userId);
+        // Map to base response
+        List<RecipeResponse> baseResponses = recipePage.getContent().stream()
+                                                .map(recipeMapper::toResponse)
+                                                .toList();
+        // Use the injected enhancer
+        List<RecipeResponse> enhancedResponses = recipeResponseEnhancer.enhanceRecipeListWithUserInteractions(baseResponses, userId);
+        
+        return new PageImpl<>(enhancedResponses, pageable, recipePage.getTotalElements());
     }
 
     /**
@@ -86,12 +84,18 @@ public class RecipeSearchService {
         Page<Recipe> recipePage = recipeRepository.findAll(pageable);
         log.debug("Found {} total recipes", recipePage.getTotalElements());
 
-        return mapAndEnhancePage(recipePage, pageable, userId);
+        List<RecipeResponse> baseResponses = recipePage.getContent().stream()
+                                                .map(recipeMapper::toResponse)
+                                                .toList();
+        // Use the injected enhancer
+        List<RecipeResponse> enhancedResponses = recipeResponseEnhancer.enhanceRecipeListWithUserInteractions(baseResponses, userId);
+        
+        return new PageImpl<>(enhancedResponses, pageable, recipePage.getTotalElements());
     }
 
     /**
      * Filter recipes by tags.
-     * Currently returns all recipes, to be implemented with actual tag filtering.
+     * Finds recipes containing ALL specified tags.
      *
      * @param filters  List of tag filters
      * @param pageable Pagination information
@@ -100,90 +104,40 @@ public class RecipeSearchService {
      */
     @Transactional(readOnly = true)
     public Page<RecipeResponse> filterRecipesByTags(List<String> filters, Pageable pageable, UUID userId) {
-        // TODO: Implement actual tag filtering logic
-        if (filters != null && !filters.isEmpty()) {
-            log.debug("Filtering recipes by tags: {}", String.join(", ", filters));
-        } else {
+        if (filters == null || filters.isEmpty()) {
             log.debug("No filter tags provided, returning all recipes");
-        }
-
-        return getAllRecipes(pageable, userId);
-    }
-
-    /**
-     * Maps recipe entities to responses and enhances them with favorite information.
-     *
-     * @param recipePage Page of recipe entities
-     * @param pageable   Pagination information
-     * @param userId     Optional user ID for favorite information
-     * @return Page of recipe responses
-     */
-    private Page<RecipeResponse> mapAndEnhancePage(Page<Recipe> recipePage, Pageable pageable, UUID userId) {
-        List<RecipeResponse> responses = recipePage.getContent().stream()
-                .map(recipe -> {
-                    // Create the base response
-                    RecipeResponse response = recipeMapper.toResponse(recipe);
-                    
-                    // Handle favorite info
-                    enhanceWithFavoriteInfo(response, userId);
-                    
-                    // Add author information
-                    enhanceWithAuthorInfo(response);
-                    
-                    return response;
-                })
-                .collect(Collectors.toList());
-
-        return new PageImpl<>(responses, pageable, recipePage.getTotalElements());
-    }
-
-    /**
-     * Enhances a recipe response with favorite information.
-     *
-     * @param response Recipe response to enhance
-     * @param userId   Optional user ID
-     * @return Enhanced recipe response
-     */
-    private RecipeResponse enhanceWithFavoriteInfo(RecipeResponse response, UUID userId) {
-        if (response == null) {
-            return null;
-        }
-
-        try {
-            // Set favorite count
-            long favoriteCount = favoriteRecipeRepository.countByRecipeId(response.getId());
-            response.setFavoriteCount(favoriteCount);
-
-            // Set is favorite flag if userId is provided
-            if (userId != null) {
-                boolean isFavorite = favoriteRecipeRepository.existsByUserIdAndRecipeId(userId, response.getId());
-                response.setIsFavorite(isFavorite);
-            } else {
-                response.setIsFavorite(false);
+            // If no filters, delegate to getAllRecipes for consistent enhancement
+            return getAllRecipes(pageable, userId);
+        } else {
+            // Clean up tags (trim, lowercase, distinct)
+            List<String> cleanedFilters = filters.stream()
+                                                 .filter(StringUtils::hasText)
+                                                 .map(String::trim)
+                                                 .map(String::toLowerCase) // Assuming tags are stored/queried lowercase
+                                                 .distinct()
+                                                 .toList();
+            
+            if (cleanedFilters.isEmpty()) {
+                log.debug("Filter tags were blank, returning all recipes");
+                return getAllRecipes(pageable, userId);
             }
-        } catch (Exception e) {
-            log.warn("Error retrieving favorite info: {}", e.getMessage());
-            response.setFavoriteCount(0L);
-            response.setIsFavorite(false);
-        }
 
-        return response;
-    }
+            log.debug("Filtering recipes containing all tags: {}", cleanedFilters);
+            // Use the repository method that finds recipes containing ALL tags
+            Page<Recipe> recipePage = recipeRepository.findByTagsContainingAll(
+                                             cleanedFilters, 
+                                             (long) cleanedFilters.size(), // Pass the count of distinct tags
+                                             pageable
+                                         );
+            log.debug("Found {} recipes matching all tags: {}", recipePage.getTotalElements(), cleanedFilters);
 
-    /**
-     * Enhances a recipe response with author information.
-     */
-    private void enhanceWithAuthorInfo(RecipeResponse response) {
-        if (response == null || response.getCreatedById() == null) {
-            return;
-        }
-        
-        try {
-            response.setAuthorName(userService.getUsernameById(response.getCreatedById()));
-            response.setUsername(response.getAuthorName()); // Keep these in sync
-        } catch (Exception e) {
-            response.setAuthorName("Unknown User");
-            response.setUsername("Unknown User");
+            List<RecipeResponse> baseResponses = recipePage.getContent().stream()
+                                                    .map(recipeMapper::toResponse)
+                                                    .toList();
+            // Use the enhancer for consistency
+            List<RecipeResponse> enhancedResponses = recipeResponseEnhancer.enhanceRecipeListWithUserInteractions(baseResponses, userId);
+            
+            return new PageImpl<>(enhancedResponses, pageable, recipePage.getTotalElements());
         }
     }
 
@@ -192,42 +146,16 @@ public class RecipeSearchService {
      */
     @Transactional(readOnly = true)
     public Page<RecipeResponse> getAllRecipesExcludingUser(Pageable pageable, UUID userId) {
+        log.debug("Fetching recipes excluding user {} with pagination: {}", userId, pageable);
         Page<Recipe> recipePage = recipeRepository.findByUserIdNot(userId, pageable);
-        List<RecipeResponse> recipeResponses = recipePage.getContent().stream()
-                .map(recipeMapper::toResponse)
-                .map(recipe -> enhanceWithUserInteractionData(recipe, userId))
-                .collect(Collectors.toList());
+        log.debug("Found {} recipes not created by user {}", recipePage.getTotalElements(), userId);
+        
+        List<RecipeResponse> baseResponses = recipePage.getContent().stream()
+                                                .map(recipeMapper::toResponse)
+                                                .toList();
+        // Use the injected enhancer
+        List<RecipeResponse> enhancedResponses = recipeResponseEnhancer.enhanceRecipeListWithUserInteractions(baseResponses, userId);
 
-        return new PageImpl<>(recipeResponses, pageable, recipePage.getTotalElements());
-    }
-
-    /**
-     * Enhance a recipe response with user interaction data.
-     */
-    private RecipeResponse enhanceWithUserInteractionData(RecipeResponse response, UUID userId) {
-        if (response == null) {
-            return null;
-        }
-
-        try {
-            // Set favorite information
-            long favoriteCount = favoriteRecipeRepository.countByRecipeId(response.getId());
-            response.setFavoriteCount(favoriteCount);
-
-            boolean isFavorite = userId != null && 
-                favoriteRecipeRepository.existsByUserIdAndRecipeId(userId, response.getId());
-            response.setIsFavorite(isFavorite);
-            
-            // Set comment count
-            long commentCount = commentService.getCommentCount(response.getId());
-            response.setCommentCount(commentCount);
-        } catch (Exception e) {
-            log.warn("Error enhancing recipe {} with interaction data: {}", response.getId(), e.getMessage());
-            response.setFavoriteCount(0L);
-            response.setIsFavorite(false);
-            response.setCommentCount(0L);
-        }
-
-        return response;
+        return new PageImpl<>(enhancedResponses, pageable, recipePage.getTotalElements());
     }
 } 
